[package]
authors = ["Jonathan Brown <jbrown@acuity.social>"]
build = 'build.rs'
description = "Implementation of an Acuity node in Rust based on the Substrate framework."
edition = '2021'
homepage = 'https://acuity.social'
license = "GPL-3.0-only"
name = 'acuity'
repository = 'https://github.com/acuity-social/acuity-substrate'
version = '1.2.2'

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'acuity'

[dependencies]
# third-party dependencies
clap = { version = "3.1.18", features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "3.1.5" }
serde = { version = "1.0.137", features = ["derive"] }
jsonrpsee = { version = "0.15.1", features = ["server"] }
futures = "0.3.21"
hex-literal = "0.3.4"
log = "0.4.17"
rand = "0.8"

pallet-acuity-atomic-swap-rpc  = { git = 'https://github.com/acuity-social/acuity-atomic-swap-pallet', branch = "master", default-features = false }

pallet-acuity-atomic-swap-rpc-runtime-api  = { git = 'https://github.com/acuity-social/acuity-atomic-swap-pallet', branch = "master", default-features = false }

pallet-acuity-trusted-accounts-rpc  = { git = 'https://github.com/acuity-social/acuity-trusted-accounts-pallet', branch = "master", default-features = false }

pallet-acuity-trusted-accounts-rpc-runtime-api  = { git = 'https://github.com/acuity-social/acuity-trusted-accounts-pallet', branch = "master", default-features = false }

# primitives
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "4.0.0-dev" }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "0.10.0-dev" }
sc-finality-grandpa-rpc = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "0.10.0-dev" }
sc-network = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "0.10.0-dev" }
sc-network-common = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "0.10.0-dev" }
sp-transaction-storage-proof = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "4.0.0-dev" }

# client dependencies
sc-sysinfo = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "6.0.0-dev" }

[dependencies.frame-system]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.frame-system-rpc-runtime-api]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'
optional = true

[dependencies.node-inspect]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '0.9.0-dev'
optional = true

[dependencies.try-runtime-cli]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '0.10.0-dev'
optional = true

[dependencies.acuity-runtime]
path = '../runtime'

[dependencies.pallet-contracts]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.pallet-contracts-rpc]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.pallet-im-online]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.pallet-transaction-payment]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.sc-authority-discovery]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '0.10.0-dev'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '0.10.0-dev'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '0.10.0-dev'
optional = true

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '0.10.0-dev'

[dependencies.sc-consensus-babe]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '0.10.0-dev'

[dependencies.sc-consensus-babe-rpc]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '0.10.0-dev'

[dependencies.sc-consensus-epochs]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '0.10.0-dev'

[dependencies.sc-consensus-slots]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '0.10.0-dev'

[dependencies.sc-consensus-uncles]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '0.10.0-dev'

[dependencies.sc-chain-spec]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '0.10.0-dev'

[dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '0.10.0-dev'

[dependencies.sc-sync-state-rpc]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '0.10.0-dev'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '0.10.0-dev'

[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.sp-authority-discovery]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '0.10.0-dev'

[dependencies.sp-consensus-babe]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '0.10.0-dev'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '6.0.0'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.sp-timestamp]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.sp-authorship]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.sp-keyring]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '6.0.0'

[dependencies.sp-keystore]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '0.12.0'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '6.0.0'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"
version = '4.0.0-dev'

[dependencies.substrate-state-trie-migration-rpc]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.28"

[target.'cfg(target_arch="x86_64")'.dependencies]
node-executor = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "3.0.0-dev", features = [
	"wasmtime",
] }
sc-cli = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "0.10.0-dev", optional = true, features = [
	"wasmtime",
] }
sc-service = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "0.10.0-dev", default-features = false, features = [
	"wasmtime",
] }
sp-trie = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "6.0.0", default-features = false, features = [
	"memory-tracker",
] }

[dev-dependencies]
sc-keystore = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "4.0.0-dev" }
sc-client-db = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "0.10.0-dev" }
sc-consensus = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "0.10.0-dev" }
sc-consensus-babe = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "0.10.0-dev" }
sc-consensus-epochs = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "0.10.0-dev" }
sc-service-test = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "2.0.0" }
sc-block-builder = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "0.10.0-dev" }
sp-tracing = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "5.0.0" }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "4.0.0-dev" }
futures = "0.3.21"
tempfile = "3.1.0"
assert_cmd = "2.0.2"
nix = "0.23"
serde_json = "1.0.81"
regex = "1.5.5"
platforms = "2.0"
async-std = { version = "1.11.0", features = ["attributes"] }
soketto = "0.7.1"
criterion = { version = "0.3.5", features = ["async_tokio"] }
tokio = { version = "1.18.2", features = ["macros", "time", "parking_lot"] }
wait-timeout = "0.2"
remote-externalities = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28" }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "4.0.0-dev" }

[build-dependencies]
clap = { version = "3.1.18", optional = true }
clap_complete = { version = "3.0", optional = true }
node-inspect = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "0.9.0-dev", optional = true }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "4.0.0-dev", optional = true }
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "3.0.0", optional = true }
substrate-frame-cli = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "4.0.0-dev", optional = true }
try-runtime-cli = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "0.10.0-dev", optional = true }
sc-cli = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "0.10.0-dev", optional = true }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28", version = "4.0.0-dev" }

[features]
default = [ "cli" ]
cli = [
	"node-executor/wasmi-errno",
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/rocksdb",
	"clap",
	"clap_complete",
	"substrate-build-script-utils",
	"try-runtime-cli",
]
runtime-benchmarks = [
	"acuity-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"acuity-runtime/try-runtime",
	"try-runtime-cli",
]
