[package]
authors = ["Jonathan Brown <jbrown@acuity.social>"]
build = 'build.rs'
description = "Implementation of an Acuity node in Rust based on the Substrate framework."
edition = '2021'
homepage = 'https://acuity.social'
license = "GPL-3.0-only"
name = 'acuity'
repository = 'https://github.com/acuity-social/acuity-substrate'
version = '1.2.4'

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'acuity'

[dependencies]
# third-party dependencies
array-bytes = "4.1"
clap = { version = "4.2.5", features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "3.2.2" }
serde = { version = "1.0.136", features = ["derive"] }
jsonrpsee = { version = "0.16.2", features = ["server"] }
futures = "0.3.21"
log = "0.4.17"
rand = "0.8"

pallet-acuity-orderbook-rpc  = { git = 'https://github.com/acuity-social/acuity-orderbook-pallet', branch = "master", default-features = false }

pallet-acuity-orderbook-rpc-runtime-api  = { git = 'https://github.com/acuity-social/acuity-orderbook-pallet', branch = "master", default-features = false }

pallet-acuity-atomic-swap-rpc  = { git = 'https://github.com/acuity-social/acuity-atomic-swap-pallet', branch = "master", default-features = false }

pallet-acuity-atomic-swap-rpc-runtime-api  = { git = 'https://github.com/acuity-social/acuity-atomic-swap-pallet', branch = "master", default-features = false }

pallet-acuity-trusted-accounts-rpc  = { git = 'https://github.com/acuity-social/acuity-trusted-accounts-pallet', branch = "master", default-features = false }

pallet-acuity-trusted-accounts-rpc-runtime-api  = { git = 'https://github.com/acuity-social/acuity-trusted-accounts-pallet', branch = "master", default-features = false }

substrate-state-trie-migration-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43", version = "4.0.0-dev" }

# primitives
sp-authority-discovery = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
grandpa-primitives = { package = "sp-consensus-grandpa", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-statement-store = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-keyring = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-transaction-storage-proof = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }

# client dependencies
sc-client-api = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-statement-store = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-network = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-network-common = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-network-sync = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-network-statement = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-consensus-slots = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-consensus-babe-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-consensus-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-consensus-grandpa-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-rpc-spec-v2 = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-service = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-telemetry = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-executor = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-authority-discovery = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-sync-state-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-sysinfo = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-storage-monitor = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }

# frame dependencies
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
pallet-im-online = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }

# node-specific dependencies
acuity-runtime = { path = '../runtime' }

# CLI-specific dependencies
sc-cli = { optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
frame-benchmarking-cli = { optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
node-inspect = { optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
try-runtime-cli = { optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
serde_json = "1.0.85"

[dev-dependencies]
sc-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-client-db = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-consensus-epochs = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-service-test = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-tracing = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43"}
futures = "0.3.21"
tempfile = "3.1.0"
assert_cmd = "2.0.2"
nix = { version = "0.26.1", features = ["signal"] }
serde_json = "1.0"
regex = "1.6.0"
platforms = "2.0"
soketto = "0.7.1"
criterion = { version = "0.4.0", features = ["async_tokio"] }
tokio = { version = "1.22.0", features = ["macros", "time", "parking_lot"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
wait-timeout = "0.2"
substrate-rpc-client = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
substrate-cli-test-utils = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }

[build-dependencies]
clap = { version = "4.2.5", optional = true }
clap_complete = { version = "4.0.2", optional = true }
node-inspect = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43", optional = true }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43", optional = true }
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43", optional = true }
substrate-frame-cli = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43", optional = true }
try-runtime-cli = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43", optional = true }
sc-cli = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43", optional = true }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sc-storage-monitor = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }

[features]
default = [ "cli" ]
cli = [
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/rocksdb",
	"clap",
	"clap_complete",
	"substrate-build-script-utils",
	"try-runtime-cli",
]
runtime-benchmarks = [
	"acuity-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["acuity-runtime/try-runtime", "try-runtime-cli"]
