[package]
authors = ["Jonathan Brown <jbrown@acuity.social>"]
build = 'build.rs'
description = "Implementation of an Acuity node in Rust based on the Substrate framework."
edition = '2021'
homepage = 'https://acuity.social'
license = "GPL-3.0-only"
name = 'acuity'
repository = 'https://github.com/acuity-social/acuity-substrate'
version = '1.2.4'

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'acuity'

[dependencies]
# third-party dependencies
array-bytes = "6.1"
clap = { version = "4.4.10", features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "3.6.1" }
serde = { version = "1.0.193", features = ["derive"] }
jsonrpsee = { version = "0.16.2", features = ["server"] }
futures = "0.3.21"
log = "0.4.17"
rand = "0.8"

pallet-acuity-trusted-accounts-rpc  = { git = 'https://github.com/acuity-social/acuity-trusted-accounts-pallet', branch = "master", default-features = false }

pallet-acuity-trusted-accounts-rpc-runtime-api  = { git = 'https://github.com/acuity-social/acuity-trusted-accounts-pallet', branch = "master", default-features = false }

substrate-state-trie-migration-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43", version = "4.0.0-dev" }

# primitives
sp-authority-discovery = "25.0.0"
sp-consensus-babe = "0.31.0"
sp-consensus-grandpa = "12.0.0"
sp-api = "25.0.0"
sp-core = "27.0.0"
sp-runtime = "30.0.1"
sp-statement-store = "9.0.0"
sp-timestamp = "25.0.0"
sp-inherents = "25.0.0"
sp-keyring = "30.0.0"
sp-keystore = "0.33.0"
sp-block-builder = "25.0.0"
sp-blockchain = "27.0.0"
sp-consensus = "0.31.0"
sp-transaction-pool = "25.0.0"
sp-transaction-storage-proof = "25.0.0"
sp-io = "29.0.0"

# client dependencies
sc-client-api = "27.0.0"
sc-chain-spec = "26.0.0"
sc-consensus = "0.32.0"
sc-transaction-pool = "27.0.0"
sc-transaction-pool-api = "27.0.0"
sc-statement-store = "9.0.0"
sc-network = "0.33.0"
sc-network-common = "0.32.0"
sc-network-sync = "0.32.0"
sc-network-statement = "0.15.0"
sc-consensus-slots = "0.32.0"
sc-consensus-babe = "0.33.0"
sc-consensus-babe-rpc = "0.33.0"
sc-consensus-grandpa = "0.18.0"
sc-consensus-grandpa-rpc = "0.18.0"
sc-rpc = "28.0.0"
sc-rpc-api = "0.32.0"
sc-rpc-spec-v2 = "0.33.0"
sc-basic-authorship = "0.33.0"
sc-service = "0.34.0"
sc-telemetry = "14.0.0"
sc-executor = "0.31.0"
sc-authority-discovery = "0.33.0"
sc-sync-state-rpc = "0.33.0"
sc-sysinfo = "26.0.0"
sc-storage-monitor = "0.15.0"

# frame dependencies
frame-system = "27.0.0"
frame-system-rpc-runtime-api = "25.0.0"
pallet-transaction-payment = "27.0.0"
pallet-transaction-payment-rpc = "29.0.0"
pallet-im-online = "26.0.0"
substrate-frame-rpc-system = "27.0.0"
frame-benchmarking = "27.0.0"

# node-specific dependencies
acuity-runtime = { path = '../runtime' }

# CLI-specific dependencies
sc-cli = { version = "0.35.0", optional = true }
frame-benchmarking-cli = { version = "31.0.0", optional = true }
node-inspect = { optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
try-runtime-cli = { version = "0.37.0", optional = true }
serde_json = "1.0.111"

[dev-dependencies]
sc-keystore = "24.0.0"
sc-client-db = "0.34.0"
sc-consensus = "0.32.0"
sc-consensus-babe = "0.33.0"
sc-consensus-epochs = "0.32.0"
sc-block-builder = "0.32.0"
sp-tracing = "15.0.0"
sp-blockchain = "27.0.0"
futures = "0.3.21"
tempfile = "3.1.0"
assert_cmd = "2.0.2"
nix = { version = "0.26.1", features = ["signal"] }
regex = "1.6.0"
platforms = "3.0"
soketto = "0.7.1"
criterion = { version = "0.4.0", features = ["async_tokio"] }
tokio = { version = "1.22.0", features = ["macros", "parking_lot", "time"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
wait-timeout = "0.2"
serde_json = "1.0.111"

substrate-rpc-client = "0.32.0"
pallet-timestamp = "26.0.0"

[build-dependencies]
clap = { version = "4.2.5", optional = true }
clap_complete = { version = "4.0.2", optional = true }
node-inspect = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43", optional = true }
frame-benchmarking-cli = { version = "31.0.0", optional = true }
substrate-build-script-utils = { version = "10.0.0", optional = true }
substrate-frame-cli = { version = "31.0.0", optional = true }
try-runtime-cli = { version = "0.37.0", optional = true }
sc-cli = { version = "0.35.0", optional = true }
pallet-balances = "27.0.0"
sc-storage-monitor = "0.15.0"

[features]
default = [ "cli" ]
cli = [
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/rocksdb",
	"clap",
	"clap_complete",
	"substrate-build-script-utils",
	"try-runtime-cli",
]
runtime-benchmarks = [
	"acuity-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["acuity-runtime/try-runtime", "try-runtime-cli"]
