[package]
name = "node-primitives"
version = "2.0.0"
description = "Substrate node low-level primitives."
edition = '2021'
license = "Apache-2.0"
homepage = "https://substrate.io"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { version = "27.0.0", default-features = false }
sp-runtime = { version = "30.0.1", default-features = false }

[features]
default = ["std"]
std = ["sp-core/std", "sp-runtime/std"]
